Fixed some spacing issues

--- a/style/style.scss
+++ b/style/style.scss
@@ -47,7 +47,8 @@ nav{
 }
 
 .header-image{
-	margin: 0 5rem;
+	margin: 0 2rem;
+	overflow: hidden;
 }
 
 .about-us, .we-recommend{
